Ajout de l'écran de recherche et affichage des résultats

--- a/AgenceLivingRoom/res/layout/fragment_home.xml
+++ b/AgenceLivingRoom/res/layout/fragment_home.xml
@@ -1,14 +1,16 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@drawable/garonne"
     android:gravity="bottom"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.yogidev.android.livingroom.HomeActivity$PlaceholderFragment" >
+    tools:context="com.yogidev.android.livingroom.HomeActivity$PlaceholderFragment"
+    android:weightSum="6" >
 
     <!-- 1 table with 2 rows, 2 cells by row, each cell = 1 linear layout containing : 1 ImageButton + 1 Button  -->
     
@@ -16,9 +18,7 @@
         android:id="@+id/table"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true" >
+        android:layout_weight ="5" >
         
         <TableRow
             android:id="@+id/tableRow1"
@@ -156,9 +156,10 @@
     
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_height="54dp"
         android:background="@android:color/background_light"
+        android:baselineAligned="false"
+        android:gravity="bottom"
         android:orientation="horizontal"
         android:weightSum="4" >
 
@@ -176,7 +177,7 @@
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
                 android:background="@android:color/transparent"
-                android:scaleType="centerCrop"
+                android:scaleType="centerInside"
                 android:src="@drawable/maison" />
 
             <TextView
@@ -200,7 +201,7 @@
                 android:id="@+id/btn_2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
+                android:scaleType="centerInside"
                 android:adjustViewBounds="true"
                 android:background="@android:color/transparent"
                 android:src="@drawable/continent" />
@@ -226,7 +227,7 @@
                 android:id="@+id/btn_3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
+                android:scaleType="centerInside"
                 android:adjustViewBounds="true"
                 android:background="@android:color/transparent"
                 android:src="@drawable/info" />
@@ -251,7 +252,7 @@
                 android:id="@+id/btn_4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
+                android:scaleType="centerInside"
                 android:adjustViewBounds="true"
                 android:background="@android:color/transparent"
                 android:src="@drawable/rouages" />
@@ -267,4 +268,4 @@
         
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
