--- a/AgenceLivingRoom/res/layout/reference_list_row.xml
+++ b/AgenceLivingRoom/res/layout/reference_list_row.xml
@@ -24,7 +24,7 @@
         android:ellipsize="marquee"
         android:singleLine="true"
         android:text="Description"
-        android:textSize="12sp" />
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/firstLine"
@@ -37,6 +37,7 @@
         android:layout_toRightOf="@id/icon"
         android:gravity="center_vertical"
         android:text="Example application"
-        android:textSize="16sp" />
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
 </RelativeLayout> 
