--- a/AgenceLivingRoom/res/layout/settings.xml
+++ b/AgenceLivingRoom/res/layout/settings.xml
@@ -33,14 +33,14 @@
 	    >
       
 		    <!-- Bouton VALIDER -->
-			<Button android:id="@+id/ButtonPalmaresSimulation"
+			<Button android:id="@+id/validerButton"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:text="@string/boutonValider"
 				android:onClick="onValiderClicked"
 				/>
 			<!-- Bouton ANNULER -->
-			<Button android:id="@+id/ButtonPalmaresAnnuler"
+			<Button android:id="@+id/annulerButton"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:text="@string/boutonAnnuler"
