--- a/AgenceLivingRoom/res/layout/splash.xml
+++ b/AgenceLivingRoom/res/layout/splash.xml
@@ -13,7 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:src="@drawable/logo" android:contentDescription="@string/logo_desc"
+        android:src="@drawable/logo" 
+        android:contentDescription="@string/logo_desc"
         />
 
 </LinearLayout>
