Customize reference the listView row and the action bar

--- a/AgenceLivingRoom/res/layout/reference_list_row.xml
+++ b/AgenceLivingRoom/res/layout/reference_list_row.xml
@@ -1,7 +1,9 @@
+<!-- android:layout_height="?android:attr/listPreferredItemHeight" -->
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/listview1"
     android:layout_width="fill_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight"
+    android:layout_height="?android:attr/listPreferredItemHeightLarge"
     android:padding="6dip" >
 
     <ImageView
@@ -15,29 +17,44 @@
         android:src="@drawable/ic_launcher" />
 
     <TextView
+        android:id="@+id/thirdLine"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/icon"
+        android:layout_below="@+id/secondLine"
+        android:layout_alignParentRight="true"
+        android:layout_alignWithParentIfMissing="true"
+        android:ellipsize="marquee"
+        android:singleLine="true"
+        android:text="Prix"
+        android:textStyle="bold"
+        android:textColor="@color/brown_livingroom_dark"
+        android:textSize="19sp" />
+    
+    <TextView
         android:id="@+id/secondLine"
         android:layout_width="fill_parent"
-        android:layout_height="26dip"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
+        android:layout_height="wrap_content"
         android:layout_toRightOf="@id/icon"
+        android:layout_below="@+id/firstLine"
+        android:layout_alignParentRight="true"
+        android:layout_alignWithParentIfMissing="true"
         android:ellipsize="marquee"
         android:singleLine="true"
         android:text="Description"
-        android:textSize="16sp" />
-
+        android:textStyle="italic"
+        android:textSize="17sp" />
+    
     <TextView
         android:id="@+id/firstLine"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@id/secondLine"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignWithParentIfMissing="true"
         android:layout_toRightOf="@id/icon"
+        android:layout_alignBaseline="@id/icon"
+        android:layout_alignWithParentIfMissing="true"
         android:gravity="center_vertical"
-        android:text="Example application"
-        android:textSize="20sp"
+        android:text="Titre de la référence"
+        android:textSize="18sp"
         android:textStyle="bold" />
 
 </RelativeLayout> 
