--- a/AgenceLivingRoom/res/values-v14/styles.xml
+++ b/AgenceLivingRoom/res/values-v14/styles.xml
@@ -14,13 +14,14 @@
     <style name="MyActionBarTheme"
            parent="@style/Widget.AppCompat.ActionBar">
         <item name="android:titleTextStyle">@style/TitleTextStyle</item>
-        <item name="android:background">@color/brown_livingroom_light</item>
+        <!-- item name="android:background">@color/brown_livingroom_light</item-->
     </style>
     
     <!-- action bar title text -->
     <style name="TitleTextStyle"
            parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/brown_livingroom_dark</item>
+        <item name="android:homeAsUpIndicator">@android:id/up</item>
     </style>
 
 </resources>
