--- a/AgenceLivingRoom/res/menu/home.xml
+++ b/AgenceLivingRoom/res/menu/home.xml
@@ -8,5 +8,11 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never"/>
+    
+    <item
+        android:id="@+id/action_about"
+        android:orderInCategory="100"
+        android:title="@string/action_infos"
+        app:showAsAction="never"/>
 
 </menu>
