ajout du bouton "delete" sur le swipe d'un item de la listview avec animation

--- a/AgenceLivingRoom/res/layout/reference_list_row.xml
+++ b/AgenceLivingRoom/res/layout/reference_list_row.xml
@@ -2,14 +2,14 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/listview1"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="?android:attr/listPreferredItemHeightLarge"
     android:padding="6dip" >
 
     <ImageView
         android:id="@+id/icon"
         android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentTop="true"
         android:layout_marginRight="6dip"
@@ -18,8 +18,8 @@
 
     <TextView
         android:id="@+id/thirdLine"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_toRightOf="@id/icon"
         android:layout_below="@+id/secondLine"
         android:layout_alignParentRight="true"
@@ -33,8 +33,8 @@
     
     <TextView
         android:id="@+id/secondLine"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_toRightOf="@id/icon"
         android:layout_below="@+id/firstLine"
         android:layout_alignParentRight="true"
@@ -47,8 +47,8 @@
     
     <TextView
         android:id="@+id/firstLine"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_toRightOf="@id/icon"
         android:layout_alignBaseline="@id/icon"
         android:layout_alignWithParentIfMissing="true"
@@ -56,5 +56,14 @@
         android:text="Titre de la référence"
         android:textSize="18sp"
         android:textStyle="bold" />
+    
+    <ImageButton
+        android:id="@+id/deleteRow"
+        android:layout_width="50dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:background="@color/brown_livingroom_light"
+        android:src="@android:drawable/ic_menu_delete" />
 
 </RelativeLayout> 
