--- a/AgenceLivingRoom/res/layout/reference_list_view.xml
+++ b/AgenceLivingRoom/res/layout/reference_list_view.xml
@@ -6,9 +6,15 @@
     android:orientation="vertical" >
 
     <ListView
-        android:id="@+id/referencelistview"
+        android:id="@android:id/list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-    </ListView>
+        android:layout_height="match_parent" />
 
+    <ViewStub
+		android:id="@android:id/empty"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:gravity="center"
+		android:layout="@layout/empty" />
+    
 </RelativeLayout>
