--- a/AgenceLivingRoom/res/menu/home.xml
+++ b/AgenceLivingRoom/res/menu/home.xml
@@ -9,6 +9,10 @@
         android:title="@string/action_settings"
         app:showAsAction="never"/>
     
+    <item android:id="@+id/menu_toggleTheme"
+          android:title="@string/day_night"
+    	  app:showAsAction="never"/>
+    
     <item
         android:id="@+id/action_about"
         android:orderInCategory="100"
