--- a/AgenceLivingRoom/res/values/colors.xml
+++ b/AgenceLivingRoom/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="black">#ff000000</color>
     <color name="brown_livingroom_light">#683E34</color>
     <color name="brown_livingroom_dark">#38110D</color>
+    <color name="actionbar_background_light">#ccffffff</color>
+    <color name="actionbar_background_dark">#cc000000</color>
+    <color name="drag_active_color">#80cccccc</color>
 </resources>
