--- a/AgenceLivingRoom/res/layout/fragment_collection_photo.xml
+++ b/AgenceLivingRoom/res/layout/fragment_collection_photo.xml
@@ -1,7 +1,9 @@
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/text1"
+    android:contentDescription="@string/description"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:textSize="128sp"
-    android:padding="32dp" />
+    android:scaleType="centerInside"
+    android:src="@drawable/logo"
+    
+    />
