--- a/AgenceLivingRoom/res/layout/fragment_description_reference.xml
+++ b/AgenceLivingRoom/res/layout/fragment_description_reference.xml
@@ -11,12 +11,12 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:text="@string/Amidonniers"/>
+            android:text="Voir les photos"/>
 
         <Button android:id="@+id/demo_external_activity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/Bonnefoy" />
+            android:text="Contacter le vendeur" />
 
     </LinearLayout>
 
