--- a/AgenceLivingRoom/res/values/styles.xml
+++ b/AgenceLivingRoom/res/values/styles.xml
@@ -23,6 +23,7 @@
         <item name="android:actionBarStyle">@style/ActionBar.Light</item>
         <item name="android:windowActionBarOverlay">false</item>
         <item name="android:textColor">@color/brown_livingroom_dark</item>
+        <item name="android:spinnerStyle">@style/Widget.Spinner</item>
     </style>
 
     <style name="AppTheme.Dark" parent="@android:style/Theme.Holo">
@@ -59,5 +60,24 @@
         <item name="android:windowEnterAnimation">@anim/appear</item>
         <item name="android:windowExitAnimation">@anim/disappear</item> 
     </style>
+    
+    <!-- Spinner theme -->
+	<!-- style name="MySpinnerTheme" parent="@android:style/Theme.Holo.Light">
+	    <item name="android:dropDownListViewStyle">@style/MySpinnerStyle</item>
+	</style-->
+	
+	<style name="Widget.Spinner" parent="android:Widget">
+        <item name="android:background">@drawable/myspinner_selector</item>
+        <item name="android:clickable">true</item>
+    </style>
+    
+    <!-- style name="MySpinnerStyle" parent="android:style/Widget.Spinner">
+	    <item name="android:divider">@android:color/holo_red_light</item>
+	    <item name="android:dividerHeight">20dp</item>
+	    <item name="android:popupBackground">@android:color/holo_red_light</item>
+	</style-->
+	<!-- item name="android:background">@color/brown_livingroom_light</item-->
+	
+	
 
 </resources>
